# RAG

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  render.yml  sementic_chunking.py
app/: agent.py  cache.py  config.py  main.py  models.py  monitoring.py  security.py
app/rag/: embeddings.py  ingestion.py  vectorstore.py
tests/: test_api.py  test_cache.py  test_security.py
