[project]
name = "rag"
version = "0.1.0"
description = "Production-grade RAG API with LangGraph, ChromaDB, and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langsmith>=0.8.14",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
